--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.jscience</groupId>
+      <artifactId>jscience</artifactId>
+      <version>4.3.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
@@ -51,6 +56,7 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
+      <version>42.3.3</version>
     </dependency>
     <dependency>
       <groupId>com.zaxxer</groupId>
