--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.datasource.url: ${JDBC_DATABASE_URL:}
+#spring.datasource.username = postgres
+#spring.datasource.password = admin
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
+
+#spring.ds-postgresql.url =jdbc:postgresql://localhost:5432/HerokuDB
+#spring.ds-postgresql.username =postgres
+#spring.ds-postgresql.password =admin
 
 spring.thymeleaf.mode=HTML
 
